# lulu

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  agent.json  run.bat
.github/workflows/: ci.yml  release.yml
installer/: lulu.nsi
runtime/: CMakeLists.txt
runtime/src/: actor.c  agent_config.c  agent_core.c  agent_db.c  channel.c  critic.c  decision_engine.c  event_bus.c  llm.c  main.c  planner.c  sandbox.c  session.c  state.c  tasks.c  telegram.c  tools.c
runtime/src/include/: actor.h  agent_config.h  agent_core.h  agent_db.h  channel.h  critic.h  decision_engine.h  event_bus.h  llm.h  planner.h  sandbox.h  session.h  state.h  tasks.h  telegram.h  tool_api.h  tool_helpers.h  tools.h  version.h
runtime/src/include/td/telegram/: td_api.h
runtime/src/subscribers/: log_subscriber.c  log_subscriber.h  mem_subscriber.c  mem_subscriber.h  sdl3_debugger.c  sdl3_debugger.h  tg_subscriber.c  tg_subscriber.h
runtime/tests/: test_agent_db.c  test_channel.c  test_harness.h  test_runner.c  test_sandbox.c  test_tasks.c  test_tools.c
runtime/tools/: create_file.c  list_files.c  none_tool.c  read_file.c  run_test.c  sdl3_render.c  telegram_tool.c
scripts/: new_tool.bat  package.sh  patch_ryugraph.sh  ryugraph-mingw.patch
state/: info.md  prompt_cache.json
templates/: tool_template.c
updater/: updater.c
